July 25 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added system to estimate the danger of a monster relative to another
	* Removed old danger system; it just didn't work
	* Monsters generation is at least a little more balanced and less dynamic now
	* Corrected a bug in the wizard mode activation code
	* Config system is now much simpler
	* Corrected a bug in std::map save code
	* Added Limit(Value, Minimum, Maximum) inline function to femath.h, which limits Value
	  to range [Minimum, Maximum] and returns it

July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Zombies' and skeletons' heads are no longer vital
	* Zombies are generated missing some bodyparts

July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Doors stay closed if closed when broken
	* Visual bugs with close in Linux with the X-button corrected
	* Skeletons now drop bones instead of bodyparts

July 25 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* A really bad memory leak corrected: materials were never destroyed. I'm bottomlessly
	  ashamed!
	* The Ferocius Luxification Bug fixed
	* level::Luxify() renamed as level::FiatLux()
	* Slot donations work again, maybe
	* Danger system is really mad

July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Flaming sword added

July 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added special flame effect to bitmaps
	* Added flames to bananas ;)

July 24 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Single weapon skill's LevelDownMessage is now printed correctly when the item is
	  wielded
	* Doubled all dodge values
	* Added "character defence values" option to SecretKnowledge
	* SecretKnowledge now writes the shown information to a file afterwards
	* Added CreateSolidMaterialConfigurations character database boolean that can be
	  used to easily add golem-like monsters
	* SecretKnowledge now shows all possible golems as separate entries
	* Attack info of nonliving bodyparts is calculated correctly at last